# datasette-llm-accountant

./: .gitignore  Justfile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
datasette_llm_accountant/: __init__.py  accountant.py  hooks.py  hookspecs.py  pricing.py  wrapper.py
sample/: llm_demo.py
sample/templates/: llm_demo.html
tests/: test_hooks.py  test_pricing.py  test_wrapper.py
