[project]
name = "datasette-llm-accountant"
version = "0.1a1"
description = "Accounting for LLM token usage"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a21",
    "datasette-llm>=0.1a0",
    "llm",
    "httpx"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "sqlite-utils",
    "llm-echo"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/datasette/datasette-llm-accountant"
Changelog = "https://github.com/datasette/datasette-llm-accountant/releases"
Issues = "https://github.com/datasette/datasette-llm-accountant/issues"
CI = "https://github.com/datasette/datasette-llm-accountant/actions"

[project.entry-points.datasette]
llm_accountant = "datasette_llm_accountant"

[tool.setuptools]
packages = ["datasette_llm_accountant"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

